# mdbook-checklist

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: clippy.yml  release.yml
src/: checklist.rs  checklist_pre.rs  main.rs
