[package]
name = "mdbook-checklist"
version = "0.1.0"
authors = ["Aurélien Deharbe <aurelien.deharbe@ssi.gouv.fr>"]
edition = "2018"
repository = "https://github.com/ANSSI-FR/mdbook-checklist"
description = "An mdBook preprocessor for generating checklists and indexes."
keywords = ["mdbook", "markdown", "preprocessor"]
readme = "README.md"
license-file = "LICENCE.md"

[dependencies]
clap = "2.32"
lazy_static = "1.2"
mdbook = "0.2"
regex = "1.1"
serde_json = "1.0"
toml = "0.4"

[[bin]]
doc = false
name = "mdbook-checklist"
