[package]
name = "mdbook-checklist"
version = "0.1.1"
authors = ["Aurélien Deharbe <aurelien.deharbe@ssi.gouv.fr>"]
edition = "2021"
repository = "https://github.com/ANSSI-FR/mdbook-checklist"
description = "An mdBook preprocessor for generating checklists and indexes."
keywords = ["mdbook", "markdown", "preprocessor"]
readme = "README.md"
license-file = "LICENCE.md"

[dependencies]
clap = "3.2"
lazy_static = "1.4"
mdbook = "0.4"
regex = "1.7"
serde_json = "1.0"
toml = "0.5"

[[bin]]
doc = false
name = "mdbook-checklist"
